istio-test-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-test-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test-gateway
spec:
  hosts:
  - "*"
  gaistio-teways:
  - test-gateway
  http:
  - match:
    - uri:
        prefix: /here
    route:
    - destination:
        host: istio-test
        port:
          number: 8001
